--- a/front-web/src/app.scss
+++ b/front-web/src/app.scss
@@ -9,3 +9,15 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 700;
 }
 
+ul {
+  list-style-type: none;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+
+a {
+    &:hover {
+      text-decoration: none;
+      color: unset;
+    }
+  }
